fix toybox title spacing

--- a/client/src/scss/ToyBox.scss
+++ b/client/src/scss/ToyBox.scss
@@ -49,6 +49,7 @@
 
     &:after {
       font-size: 1rem;
+      margin-top: 1rem;
     }
 
     &:hover {
